fix: no notifications for hidden companies