@@ -1,28 +1,32 @@
 package com.jobwatch.apiservice.controllers;
 
+import com.jobwatch.apiservice.models.Company;
 import com.jobwatch.apiservice.models.User;
 import com.jobwatch.apiservice.models.UserPreferences;
+import com.jobwatch.apiservice.repositories.CompanyRepository;
 import com.jobwatch.apiservice.repositories.UserPreferencesRepository;
 import com.jobwatch.apiservice.repositories.UserRepository;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
-import java.util.Map;
 
 @RestController
 public class PreferencesController {
 
     private final UserPreferencesRepository preferencesRepository;
     private final UserRepository userRepository;
+    private final CompanyRepository companyRepository;
 
     public PreferencesController(UserPreferencesRepository preferencesRepository,
-                                 UserRepository userRepository) {
+                                 UserRepository userRepository,
+                                 CompanyRepository companyRepository) {
         this.preferencesRepository = preferencesRepository;
         this.userRepository = userRepository;
+        this.companyRepository = companyRepository;
     }
 
     // User fetches their own preferences
@@ -33,7 +37,7 @@ public class PreferencesController {
 
         return preferencesRepository.findByUser(user)
                 .map(p -> ResponseEntity.ok(toResponse(p)))
-                .orElse(ResponseEntity.ok(new PreferencesResponse(List.of(), List.of())));
+                .orElse(ResponseEntity.ok(new PreferencesResponse(List.of(), List.of(), List.of())));
     }
 
     // User saves their preferences
@@ -55,7 +59,35 @@ public class PreferencesController {
         return ResponseEntity.ok(toResponse(prefs));
     }
 
-    // Internal — notification-service checks a user's preferences by email
+    // Toggle mute for a company — adds if not muted, removes if already muted
+    @PostMapping("/api/watchlist/{companyId}/mute")
+    public ResponseEntity<PreferencesResponse> toggleMute(
+            @PathVariable Long companyId,
+            Authentication authentication) {
+
+        User user = userRepository.findByUsername(authentication.getName())
+                .orElseThrow(() -> new RuntimeException("User not found"));
+
+        Company company = companyRepository.findById(companyId)
+                .orElseThrow(() -> new RuntimeException("Company not found"));
+
+        UserPreferences prefs = preferencesRepository.findByUser(user)
+                .orElse(new UserPreferences());
+        prefs.setUser(user);
+
+        List<String> muted = new ArrayList<>(splitOrEmpty(prefs.getMutedCompanies()));
+        if (muted.contains(company.getSlug())) {
+            muted.remove(company.getSlug());
+        } else {
+            muted.add(company.getSlug());
+        }
+        prefs.setMutedCompanies(String.join(",", muted));
+        preferencesRepository.save(prefs);
+
+        return ResponseEntity.ok(toResponse(prefs));
+    }
+
+    // Internal — notification-service checks a user's preferences by username
     @GetMapping("/internal/preferences")
     public ResponseEntity<PreferencesResponse> getPreferencesInternal(@RequestParam String email) {
         User user = userRepository.findByUsername(email)
@@ -63,19 +95,22 @@ public class PreferencesController {
 
         return preferencesRepository.findByUser(user)
                 .map(p -> ResponseEntity.ok(toResponse(p)))
-                .orElse(ResponseEntity.ok(new PreferencesResponse(List.of(), List.of())));
+                .orElse(ResponseEntity.ok(new PreferencesResponse(List.of(), List.of(), List.of())));
     }
 
     private PreferencesResponse toResponse(UserPreferences p) {
-        List<String> cats = (p.getCategories() == null || p.getCategories().isBlank())
-                ? List.of()
-                : Arrays.asList(p.getCategories().split(","));
-        List<String> sens = (p.getSeniorities() == null || p.getSeniorities().isBlank())
-                ? List.of()
-                : Arrays.asList(p.getSeniorities().split(","));
-        return new PreferencesResponse(cats, sens);
+        return new PreferencesResponse(
+                splitOrEmpty(p.getCategories()),
+                splitOrEmpty(p.getSeniorities()),
+                splitOrEmpty(p.getMutedCompanies())
+        );
+    }
+
+    private List<String> splitOrEmpty(String value) {
+        if (value == null || value.isBlank()) return List.of();
+        return Arrays.asList(value.split(","));
     }
 
     record PreferencesRequest(List<String> categories, List<String> seniorities) {}
-    record PreferencesResponse(List<String> categories, List<String> seniorities) {}
+    record PreferencesResponse(List<String> categories, List<String> seniorities, List<String> mutedCompanies) {}
 }
